# colorole-rs

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20230201201319_initial_migration.sql
src/: main.rs
src/commands/: clear.rs  color.rs  mod.rs  pfp.rs  ping.rs  sync.rs
src/handler/: mod.rs
src/utils/: mod.rs
